--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 		<p style="color:white;">Лена Окстон (известная как Трейсер ) - играбельный вымышленный персонаж, который появляется в видеоигре Overwatch 2016 года - шутере от первого лица, разработанном Blizzard Entertainment - и связанных с ней анимационных и литературных СМИ.</p>
 	</div>
 </div>
-<div style="height: 350px;background-image: url(12.JPG); background-size: 100% 100%; margin-top: 50px;">
 
-<div style="height:;"></div>
+
+<div style="height: 350px;background-image: url(12.JPG); background-size: 100% 100%; margin-top: 50px;">
  <div style="height: 200px; width:400px ;margin-left: 60px;">
  	<h1 style="color:white;">СОЗДАВАЙ МИРЫ</h1>
  	<p style="color:white;">ВСЕ О РОБОТЕ BLIZZARD</p>
- 	<button style="background: steelblue;color:white; height: 40PX;WIDTH:120PX;color: WHITE; ">ВАКАНСИИ</button>	
+ 	<button style="background: steelblue;color:white; height: 40PX;WIDTH:120PX;color: WHITE; ">ВАКАНСИИ</button>	</div>
